@@ -230,6 +230,10 @@ INCOMPATIBILITY.
 
 *** ML ***
 
+* Low-level ML system structures (like PolyML and RunCall) are no longer
+exposed to Isabelle/ML user-space. The system option ML_system_unsafe
+allows to override this for special test situations.
+
 * Antiquotation @{make_string} is available during Pure bootstrap --
 with approximative output quality.
 
